WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
231783
Fix build failures with newer clang
https://bugs.webkit.org/show_bug.cgi?id=231783
Summary
Fix build failures with newer clang
Yusuke Suzuki
Reported
2021-10-14 16:27:19 PDT
Use default copy constructor / assignment operators by dropping explicit copy constructor definition in TouchBarMenuItemData
Attachments
Patch
(1.65 KB, patch)
2021-10-14 16:28 PDT
,
Yusuke Suzuki
no flags
Details
Formatted Diff
Diff
Patch
(4.48 KB, patch)
2021-10-14 16:39 PDT
,
Yusuke Suzuki
cdumez
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Yusuke Suzuki
Comment 1
2021-10-14 16:28:32 PDT
Created
attachment 441302
[details]
Patch
Yusuke Suzuki
Comment 2
2021-10-14 16:39:34 PDT
Created
attachment 441305
[details]
Patch
Yusuke Suzuki
Comment 3
2021-10-14 16:44:47 PDT
Landing it now since it is build failure fix. I ensured it is built locally.
Yusuke Suzuki
Comment 4
2021-10-14 16:48:40 PDT
Committed
r284215
(
243025@main
): <
https://commits.webkit.org/243025@main
>
Radar WebKit Bug Importer
Comment 5
2021-10-14 16:49:27 PDT
<
rdar://problem/84280768
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug